2002-11-12  Gary Thomas  <gary@mlbassoc.com>

	* src/ecos/timeout.c (callout_reset): Check for finding the
	correct "delta" was wrong - only used with asserts enabled.

	* include/sys/uio.h: Compatability wrapper to expose 'iovec'
	functions - used by many network programs.

2002-11-04  Gary Thomas  <gthomas@ecoscentric.com>

	* src/sys/net/if.c (if_attach): Moved check for ifq_maxlen to
	this function since it can't be checked until the device comes
	online, which may not be a sysinit time for PCMCIA devices.

2002-11-03  Gary Thomas  <gthomas@ecoscentric.com>

	* src/sys/kern/sockio.c (bsd_getname): Fix error where getsockname()
	was actually performing getpeername().

	* include/sys/uio.h: New file - compatability wrapper.

2002-07-31  Gary Thomas  <gary@chez-thomas.org>

	* src/sys/netinet/in_cksum.c: Fix problem on big endian machines.

2002-07-26  Gary Thomas  <gary@chez-thomas.org>
2002-07-26  Ken Cox <jkc@redhat.com>

	* src/ecos/support.c (ovbcopy): ovbcopy() must handle the case 
	where the src and dst regions are overlayed.  memcpy() does not 
	handle this case, but memmove() does.

2002-07-10  Gary Thomas  <gary@chez-thomas.org>

	* src/sys/netinet/udp_usrreq.c: 
	* src/sys/netinet/tcp_subr.c: 
	* src/sys/netinet/in_pcb.c: Rename 'errno' function parameter
	since some compilers have problems with this.

2002-07-08  Gary Thomas  <gary@chez-thomas.org>

	* include/sys/param.h: Need <errno.h> which may or may not be
	already present, depending on configuration.

2002-06-20  Gary Thomas  <gary@chez-thomas.org>

	* include/sys/param.h (sprintf): Map to diag_sprintf().

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/ecos/support.c: 
	Fix compile errors when CYGDBG_NET_TIMING_STATS enabled.

2002-06-05  Gary Thomas  <gary@chez-thomas.org>

	* include/netinet/in.h: Rename 'ip_opts' field (using the same
	name as the structure is illegal in C++).

2002-05-14  Jesper Skov  <jskov@redhat.com>

	* include/netinet6/in6.h: Fixed warnings.
